# mdanalysis

./: .gitignore  CMakeLists.txt  README.md  main.cpp  mda_cmd.cpp
.github/workflows/: build.yml  cmake.yml  test.yml
Actions/: CMakeLists.txt  Crystal.cpp  Crystal.hpp  LennardJones.cpp  LennardJones.hpp  MorsePotential.cpp  MorsePotential.hpp  NanoparticleGeneration.cpp  NanoparticleGeneration.hpp  mda_actions.cpp  mda_actions.hpp  mda_tools.cpp  mda_tools.hpp
Calculations/: Bin.cpp  CMakeLists.txt  Calculation.h  CalculationTools.h  DataFileParser.cpp  DataFileParser.h  Timeseries.cpp  Timeseries.h
Driver/: CMakeLists.txt  Driver.cpp  Driver.h
OrderParameters/: Array.h  AtomDerivativesSet.cpp  AtomDerivativesSet.h  AtomGroup.cpp  AtomGroup.h  AtomGroupParsingStrategy.cpp  AtomGroupParsingStrategy.h  BetaFactorWriter.cpp  BetaFactorWriter.h  Bin.cpp  Bin.h  CMakeLists.txt  CageFinder.cpp  CageFinder.h  CageFinderAlgorithm.cpp  CageFinderAlgorithm.hpp  Calculation.cpp  Calculation.h  CalculationTools.cpp  CalculationTools.h  CellGrid.cpp  CellGrid.h  ChillPlus.cpp  ChillPlus.h  ClathrateCageOccupancy.cpp  ClathrateCageOccupancy.h  CrossSectionalDensity.cpp  CrossSectionalDensity.h  CylindricalRDF.cpp  CylindricalRDF.h  DataFileParser.h  DensityField.cpp  DensityField.h  DeuteriumOP.cpp  DeuteriumOP.h  Dimer.cpp  Dimer.h  Dipole.cpp  Dipole.h  DipoleDistributionRDF.cpp  (+146 more)
cmake/: FindFFTW3.cmake  InstallLibraryWithStandardSetup.cmake  TestSetup.cmake
parallel/: CMakeLists.txt  MPI_environment.cpp  MPI_environment.h  OpenMP.cpp  OpenMP.h  OpenMP_buffer.h
scripts/: build.sh
test/: CMakeLists.txt  run_test.py  run_test.sh
test/SampleTrajectory/: 5CB.itp  5CBSAM.gro  5CBSAM.tpr  C18_NP_nptE.gro  NP.itp  NP.tpr  SAM.top  ff_LC.itp  test.gro
test/SampleTrajectory/CNSAM/: 5CB.itp  CNSAM.xtc  ff_LC.itp  topol.top
test/SampleTrajectory/EnergyGroups/: e.xvg  md.mdp  test.edr  test.gro  test.tpr  test.xtc  topol.top
test/SampleTrajectory/bulk_5CB/: 5CB.itp  5CB_bulk.xtc  5d_295.gro  ff_LC.itp  topol.top
test/TestAtomSelection/TestAtomIndexSelection/: main.cpp
test/TestAtomSelection/TestAtomTypeSelection/: main.cpp
test/TestAtomSelection/TestResidueNumberSelection/: main.cpp
test/TestCLT/NPgen/: NPgen.ipynb  Wall.gro  out.gro  potential_grid.out  run.sh  spherical.gro  sulfur.gro  sulfur.out  t  test.gro
test/TestCLT/NPgen/.ipynb_checkpoints/: NPgen-checkpoint.ipynb
test/TestCalculation/TestDipole/: ref.out
test/TestCalculation/TestOrientationalDistribution/: dist_ref.out
test/TestCalculation/TestPcost/: ref.out
test/TestCalculation/TestPcostz/: ref.out
test/TestCalculation/TestRdfResidue/: rdf_ref.out  ref.out
test/TestCalculation/TestSlabOrientation/: pcost_ref.out  ref.out
test/TestCalculation/TestSlabQtensor/: p2z_ref.out
test/TestCalculation/TestUsr/TestNS/: op_ref.out  test.out
test/TestCalculation/Testgcost/: g1_ref.out  ref.out
test/TestOP/TestIndus/box/: op_ref.out  ref.out
test/TestOP/TestIndus/sphere/: ref.out
test/TestOP/TestP2/: ref.out
test/TestOP/TestP2tilde/: ref.out
test/TestTools/TestCmdArguments/: main.cpp
test/TestXdr/: main.cpp
test/testXdr/: main.cpp
tools/: Algorithm.cpp  Algorithm.h  Assert.h  CMakeLists.txt  CommandLineArguments.cpp  CommandLineArguments.h  CommonOperations.h  CommonTypes.h  Constants.h  FileSystem.cpp  FileSystem.h  Frame.cpp  Frame.h  GenericFactory.h  InputParser.cpp  InputParser.h  RandomNumber.cpp  RandomNumber.h  Registry.h  Timer.cpp  Timer.h  TrrFile.cpp  TrrFile.h  XdrWrapper.cpp  XdrWrapper.h
tools/libxdr/: CMakeLists.txt
xdr/: CMakeLists.txt  Frame.h  GroFile.cpp  GroFile.h  MoleculeStructs.h  TopologyReader.cpp  TopologyReader.h  TrrFile.cpp  TrrFile.h  XdrWrapper.cpp  XdrWrapper.h  XtcFile.cpp  XtcFile.h
xdr/libxdr/: CMakeLists.txt
